fix: Refactor code in service classes (#28)